Minor UI changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,12 +2,13 @@
 <html lang="eng">
 <head>
     <title>SportsCenter</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css">
-<!--    <style>-->
-<!--        .carousel-item div.block {-->
-<!--            background-image: none !important;-->
-<!--        }-->
-<!--    </style>-->
+    <style>
+        .carousel-item div.block {
+            background-image: none !important;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/index.js" defer></script>
@@ -41,7 +42,7 @@
 
         <div class="order-1 md:order-2">
             <a class="flex items-center tracking-wide no-underline hover:no-underline font-bold  text-xl " href="#">
-                SHOPIX
+                BOOKTHETURF
             </a>
         </div>
 
