--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,7 +78,7 @@
 
                 <div class="container mx-auto">
                     <div class="flex flex-col w-full lg:w-1/2 md:ml-16 items-center md:items-start px-6 tracking-wide">
-                        <p class="font-bold text-2xl my-4">Stripy Zig Zag Jigsaw Pillow and Duvet Set</p>
+                        <p class="font-bold text-2xl my-4">Get the deal now</p>
                         <a class="text-xl inline-block no-underline border-b border-gray-600 leading-relaxed hover:text-black hover:border-black" href="#">View Product</a>
                     </div>
                 </div>
