--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -42,5 +42,39 @@
         </div>
     </form>
 </div>
+<script>
+    document.getElementById('loginForm').addEventListener('submit', async (event) => {
+        event.preventDefault(); // Prevent default form submission
+
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+
+        try {
+            const response = await fetch('http://localhost:8080/wwp/webapi/service/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ email, password }), // Send email and password as JSON
+            });
+
+            if (!response.ok) {
+                const errorData = await response.json();
+                alert(`Login failed: ${errorData.message || 'Unknown error'}`);
+                return;
+            }
+
+            const data = await response.json();
+            alert(data.message || 'Login successful'); // Display success message
+
+            // Redirect or perform other actions upon successful login
+            window.location.href = 'index.html'; // Example: Redirect to index.html
+
+        } catch (error) {
+            console.error('Login error:', error);
+            alert('An error occurred during login.');
+        }
+    });
+</script>
 </body>
 </html>
